FIX: mute button alignment when follow button widens buttons on user page

--- a/assets/stylesheets/common/follow.scss
+++ b/assets/stylesheets/common/follow.scss
@@ -49,3 +49,11 @@
     text-align: left;
    }
 }
+
+.select-kit.dropdown-select-box.user-notifications-dropdown {
+  width:100%;
+  .select-kit-header-wrapper {
+    align-items: center;
+    justify-content: center;
+  }
+}
